<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="8dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginRight="5dp"
            android:text="@string/text_from" />

        <Spinner
            android:id="@+id/spinnerFrom"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="20dp"
            android:text="@string/text_to" />

        <Spinner
            android:id="@+id/spinnerTo"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp" />
    </LinearLayout>

    <Button
        android:id="@+id/buttonSwitch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="50dp"
        android:text="@string/switch_currencies"
        android:textSize="12sp" />

    <EditText
        android:id="@+id/amount"
        android:layout_width="120dp"
        android:layout_marginTop="16dp"
        android:layout_height="wrap_content"
        android:hint="@string/amount"
        android:inputType="phone" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="5dp"
        android:text="@string/buying_rate"
        android:textColor="#000" />

    <TextView
        android:id="@+id/textResultBuying"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="8dp"
        android:layout_marginRight="5dp"
        android:textSize="24sp" />

    <TextView

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="8dp"
        android:layout_marginRight="5dp"
        android:text="@string/selling_rate"
        android:textColor="#000" />

    <TextView
        android:id="@+id/textResultSelling"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="8dp"
        android:layout_marginRight="5dp"
        android:textSize="24sp" />

    <Button
        android:id="@+id/buttonSubmit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="50dp"
        android:text="@string/submit_button" />

</LinearLayout>